--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,6 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
 @import "./multiselect.css";
 @import "./filepond.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -266,56 +267,57 @@
 
 	@keyframes shake {
 		0% {
-			transform: translateY(0);
+			transform: translateX(0);
 			background-color: #ff0;
 		}
 
 		10% {
-			transform: translateY(-10px);
+			transform: translateX(-25px);
 			background-color: #ff0;
 		}
 
 		20% {
-			transform: translateY(10px);
+			transform: translateX(25px);
 			background-color: #ff0;
 		}
 
 		30% {
-			transform: translateY(-10px);
+			transform: translateX(-25px);
 		}
 
 		40% {
-			transform: translateY(10px);
+			transform: translateX(25px);
 		}
 
 		50% {
-			transform: translateY(-10px);
+			transform: translateX(-25px);
 		}
 
 		60% {
-			transform: translateY(10px);
+			transform: translateX(25px);
 		}
 
 		70% {
-			transform: translateY(-10px);
+			transform: translateX(-25px);
 		}
 
 		80% {
-			transform: translateY(10px);
+			transform: translateX(25px);
 		}
 
 		90% {
-			transform: translateY(-10px);
+			transform: translateX(-25px);
 		}
 
 		to {
-			transform: translateY(0);
+			transform: translateX(0);
 		}
 	}
 
 	.animate-shake {
 		animation: shake 0.7s ease-in-out;
 	}
+
 	.filepond.filepond--root[data-style-panel-layout~="circle"]
 		.filepond--file
 		[data-align*="right"] {
